imagens adicionadas e css para texto principal

--- a/index.html
+++ b/index.html
@@ -17,6 +17,28 @@
               
             </ul>
             </header>
+            <div class="content">
+                <div class="textBox">
+                    <h2>Mais do que somente café.<br>É <span>Starbucks</span></h2>
+                    <p>
+                        Todos os dias, os partners da Starbucks vão para o trabalho na esperança de fazer duas coisas: 
+                        compartilhar um excelente café com os amigos e ajudar a tornar o mundo um pouco melhor.
+                        Isso acontece milhões de vezes por semana - um consumidor recebe uma bebida de um barista da Starbucks - 
+                        mas cada interação é única.  É apenas um instante - apenas uma mão estendida sobre o balcão para entregar uma xícara 
+                        a outra mão estendida. 
+                        Mas é uma conexão.
+                    </p>
+                    <a href="#">Saiba mais</a>
+                </div>
+                <div class="imgBox">
+                    <img src="src/images/img1.png" class="Starbucks">
+                </div>
+            </div>
+            <ul class="thumb">
+                <li><img src="src/images/thumb1.png"></li>
+                <li><img src="src/images/thumb2.png"></li>
+                <li><img src="src/images/thumb3.png"></li>
+            </ul>
     </section>
 
 </body>
