Página Contato pronto

--- a/contact.html
+++ b/contact.html
@@ -12,33 +12,31 @@
         <header>
             <a href="#" class="logo"><img src="src/images/logo.png"></a>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Cardápio</a></li>
                 <li><a href="#">Novidades</a></li>
-                <li><a href="contact.html">Contato</a></li>
+                <li><a href="#">Contato</a></li>
               
             </ul>
             </header>
             <div class="content">
                 <div class="textBox">
-                    <h2>Mais do que somente café.<br>É <span>Starbucks</span></h2>
-                    <p>
-                        Todos os dias, os partners da Starbucks vão para o trabalho na esperança de fazer duas coisas: 
-                        compartilhar um excelente café com os amigos e ajudar a tornar o mundo um pouco melhor.
-                        Isso acontece milhões de vezes por semana - um consumidor recebe uma bebida de um barista da Starbucks - 
-                        mas cada interação é única.  É apenas um instante - apenas uma mão estendida sobre o balcão para entregar uma xícara 
-                        a outra mão estendida. 
-                        Mas é uma conexão.
-                    </p>
-                    <a href="#">Saiba mais</a>
+                    <h2><span>Starbucks</span></h2>
+                    
+                    <div class="contato">
+                        <h3>Entre em contato conosco!</h2>
+                        <h3>Tel: (31) 3532 4087</h3>
+                        <a href="mailto:starbuckbrasil@starbucks.com.br">starbuckbrasil@starbucks.com.br</a>
+                    </div>
+
                 </div>
                 <div class="imgBox">
-                    <img src="src/images/img1.png" class="Starbucks">
+                    <img src="src/images/img2.png" class="Starbucks">
                 </div>
             </div>
             <ul class="thumb">
                 <li><img src="src/images/thumb1.png" onmouseover="imgSlider('src/images/img1.png');changeCircleColor('#017143')"></li>
-                <li><img src="src/images/thumb2.png" onmouseover="imgSlider('src/images/img2.png');changeCircleColor('#eb7495')"></li>
+                <li><img src="src/images/thumb2.png" onmouseover="imgSlider('src/images/img2.png');randomCircleColor()"></li>
                 <li><img src="src/images/thumb3.png" onmouseover="imgSlider('src/images/img3.png');randomCircleColor()"></li>
             </ul>
             <ul class="sci">
